Update exchange2.java